--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "create-cname": "echo 'www.ansshameed.com' > out/CNAME",
+    "predeploy": "npm run build && npm run export && npm run create-cname",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@react-email/components": "^0.0.22",
@@ -29,11 +33,13 @@
     "react-social-icons": "^6.17.0",
     "react-type-animation": "^3.2.0",
     "react-vertical-timeline-component": "^3.6.0",
-    "resend": "^0.16.0",
+    "resend": "^4.0.0",
     "tailwindcss": "3.4.4",
     "typescript": "5.4.5"
   },
   "devDependencies": {
-    "@types/react-vertical-timeline-component": "^3.3.6"
+    "@types/react-vertical-timeline-component": "^3.3.6",
+    "gh-pages": "^6.1.1"
   }
 }
+
